# Daw-proyecto-final

./: .env.example  .gitignore  D4-Ticket-AI-Guion.docx  Dockerfile.railway  MEMORIA_PROYECTO.md  README.md  arquitectura.md  docker-compose.yml  package.json  railway.json  todo.md
backend/: .dockerignore  .env.example  AUDIT_FINDINGS.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0a14b558cb80_merge_heads_for_ai_feedback_and_indexes.py  1a2b3c4d5e6f_add_ai_runs_and_feedback.py  9bc21880aaa1_add_pgvector_and_ticket_embeddings.py  a1b2c3d4e5f6_add_knowledge_chunks.py  a7b8c9d0e1f2_add_use_for_rag_to_attachments.py  aa9501823b21_add_ticket_number.py  b2c3d4e5f6a7_update_embedding_dim_768_to_3072.py  c3d4e5f6a7b8_add_client_context_and_metadata.py  (+8 more)
backend/app/: main.py
backend/scratch/: check_db.py
backend/scripts/: apply_user_request.py  check_checkpoints.py  check_dim.py  check_summary.py  debug_agent_hang.py  diagnose_db.py  direct_seed_768.py  direct_seeder.py  fix_production_dimensions.py  inspect_rag.py  list_ids.py  mass_seed_100.py  migrate_embeddings_768.py  migrate_summaries.py  patch_db_v2.py  redistribute_tickets.py  seed_virtual_users.py  test_ai_local.py  test_persistence.py  test_report_phase1.md  test_report_phase2.md  test_report_phase3.md  update_enum.py
backend/tests/: conftest.py  test_ai_metrics.py  test_ai_tools.py  test_attachments.py  test_auth.py  test_comments.py  test_knowledge.py  test_notifications.py  test_orbidi_strict_regressions.py  test_security.py  test_ticket_history.py  test_tickets.py  test_users.py
(+139 files in other folders)
