[project]
name = "d4-ticket-ai-backend"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0,<0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "boto3>=1.35.0",
    "aiobotocore>=2.13.0",
    "pillow>=11.0.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.50.0",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.6",
    "langchain-postgres>=0.0.13",
    "trafilatura>=2.0.0",
    "redis>=7.4.0",
    "google-generativeai>=0.8.0",
    "google-genai>=1.0.0",
    "greenlet>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning:fastapi",
    "ignore:.*AgentStatePydantic.*:langgraph.errors.LangGraphDeprecatedSinceV10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
